k8s/apps/observability/uptime-kuma/app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  type: ClusterIP
  selector:
    app: uptime-kuma
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: http
