k8s/apps/observability/uptime-kuma/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
spec:
  parentRefs:
    - name: homelab
      namespace: gateway-system
      sectionName: https
  hostnames:
    - uptime-kuma.k8s.murtadha.dev
  rules:
    - backendRefs:
        - name: uptime-kuma
          port: 3001
